--- a/docs/_includes/masthead.html
+++ b/docs/_includes/masthead.html
@@ -23,7 +23,7 @@
   <div class="w-nav-overlay" data-wf-ignore="" id="w-nav-overlay-0"></div>
 </div>
 
-<!-- <div class="masthead">
+<div class="masthead">
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
@@ -57,4 +57,4 @@
       </nav>
     </div>
   </div>
-</div> -->
+</div>
