completed nav, removed titles

--- a/docs/_includes/masthead.html
+++ b/docs/_includes/masthead.html
@@ -3,18 +3,17 @@
 <div data-collapse="medium" data-animation="default" data-duration="5" role="banner" class="nav w-nav">
   <div class="header-div w-container">
     <div class="header-brand-div">
-      <a href="#" class="w-nav-brand">
+      <a href="http://deepspeed-proto-s-3a3d86-f73f919f2bc00.webflow.io/" class="w-nav-brand">
         <img src="https://uploads-ssl.webflow.com/60afb5d05711b86daadde7ae/60db6cb20645e47f22564124_Deepspeed_header-logo.svg" loading="lazy" width="69" alt="" class="header-logo">
       </a>
     </div>
     <nav role="navigation" class="nav-menu w-nav-menu">
-      <a href="#" class="nav-link-6 w-nav-link" style="max-width: 1250px;">Get Started</a>
-      <a href="#" class="nav-link-5 w-nav-link" style="max-width: 1250px;">News</a>
-      <a href="#" class="nav-link-3 w-nav-link" style="max-width: 1250px;">Tutorials</a>
-      <a href="#" class="nav-link-3 w-nav-link" style="max-width: 1250px;">Docs</a>
-      <a href="#" class="button-2 w-button">We're Hiring</a>
-      <a href="#" class="nav-link-2 w-nav-link" style="max-width: 1250px;">GitHub</a>
-      <a href="#" class="nav-link w-nav-link" style="max-width: 1250px;">Hiring</a>
+      <a href="/getting-started/" class="nav-link-6 w-nav-link" style="max-width: 1250px;">Get Started</a>
+      <a href="/news/" class="nav-link-5 w-nav-link" style="max-width: 1250px;">News</a>
+      <a href="/tutorials/" class="nav-link-3 w-nav-link" style="max-width: 1250px;">Tutorials</a>
+      <a href="https://deepspeed.readthedocs.io/en/latest/" class="nav-link-3 w-nav-link" style="max-width: 1250px;">Docs</a>
+      <a href="https://careers.microsoft.com/us/en/search-results?keywords=deepspeed" class="button-2 w-button">We're Hiring</a>
+      <a href="https://github.com/microsoft/DeepSpeed" class="nav-link-2 w-nav-link" style="max-width: 1250px;">GitHub</a>
     </nav>
     <div class="menu-button w-nav-button" style="-webkit-user-select: text;" aria-label="menu" role="button" tabindex="0" aria-controls="w-nav-overlay-0" aria-haspopup="menu" aria-expanded="false">
       <div class="icon w-icon-nav-menu"></div>
@@ -23,7 +22,7 @@
   <div class="w-nav-overlay" data-wf-ignore="" id="w-nav-overlay-0"></div>
 </div>
 
-<div class="masthead">
+<!-- <div class="masthead">
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
@@ -57,4 +56,4 @@
       </nav>
     </div>
   </div>
-</div>
+</div> -->
