fixing nav url bug

--- a/docs/_includes/masthead.html
+++ b/docs/_includes/masthead.html
@@ -8,9 +8,9 @@
       </a>
     </div>
     <nav role="navigation" class="nav-menu w-nav-menu">
-      <a href="/getting-started/" class="nav-link-6 w-nav-link" style="max-width: 1250px;">Get Started</a>
-      <a href="/news/" class="nav-link-5 w-nav-link" style="max-width: 1250px;">News</a>
-      <a href="/tutorials/" class="nav-link-3 w-nav-link" style="max-width: 1250px;">Tutorials</a>
+      <a href="/DeepSpeed/getting-started/" class="nav-link-6 w-nav-link" style="max-width: 1250px;">Get Started</a>
+      <a href="/DeepSpeed/news/" class="nav-link-5 w-nav-link" style="max-width: 1250px;">News</a>
+      <a href="/DeepSpeed/tutorials/" class="nav-link-3 w-nav-link" style="max-width: 1250px;">Tutorials</a>
       <a href="https://deepspeed.readthedocs.io/en/latest/" class="nav-link-3 w-nav-link" style="max-width: 1250px;">Docs</a>
       <a href="https://careers.microsoft.com/us/en/search-results?keywords=deepspeed" class="button-2 w-button">We're Hiring</a>
       <a href="https://github.com/microsoft/DeepSpeed" class="nav-link-2 w-nav-link" style="max-width: 1250px;">GitHub</a>
