trying to get mobile nav displaying correctly

--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -910,6 +910,7 @@ h2 {
     width: 90vw;
     max-width: 270px;
   }
+  .w-nav[data-collapse="medium"] .w-nav-menu{display:none}.w-nav[data-collapse="medium"] .w-nav-button{display:block}
 }
 
 @media screen and (max-width: 767px) {
