--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -15,6 +15,24 @@ body {
   font-family: Roboto, sans-serif;
 }
 
+[class^="w-icon-"],[class*=" w-icon-"]{
+  // font-family: 'webflow-icons' !important;
+  font-family: 
+  speak:none;
+  font-style:normal;
+  font-weight:normal;
+  font-variant:normal;
+  text-transform:none;
+  line-height:1;
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing:grayscale;
+}
+
+.w-icon-nav-menu:before{
+  // content:"\e602"
+  content:"\f0c9"
+}
+
 .nav {
   position: -webkit-sticky;
   position: sticky !important;
@@ -912,21 +930,6 @@ h2 {
   }
   .w-nav[data-collapse="medium"] .w-nav-menu{display:none}.w-nav[data-collapse="medium"] .w-nav-button{
     display:block
-  }
-
-  [class^="w-icon-"],[class*=" w-icon-"]{
-    font-family:'webflow-icons' !important;
-    speak:none;
-    font-style:normal;
-    font-weight:normal;
-    font-variant:normal;
-    text-transform:none;
-    line-height:1;
-    -webkit-font-smoothing:antialiased;
-    -moz-osx-font-smoothing:grayscale;
-  }
-  .w-icon-nav-menu:before{
-    content:"\e602"
   }
 }
 
