more progress on mobile nav

--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -16,8 +16,7 @@ body {
 }
 
 [class^="w-icon-"],[class*=" w-icon-"]{
-  // font-family: 'webflow-icons' !important;
-  font-family: 
+  font-family: 'webflow-icons' !important;
   speak:none;
   font-style:normal;
   font-weight:normal;
