hopefully more progress on mobile nav

--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -28,8 +28,8 @@ body {
 }
 
 .w-icon-nav-menu:before{
-  // content:"\e602"
-  content:"\f0c9"
+  content:"\e602"
+  // content:"\f0c9"
 }
 
 .nav {
