reverting mobile to previous functional state

--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -27,10 +27,9 @@ body {
   -moz-osx-font-smoothing:grayscale;
 }
 
-.w-icon-nav-menu:before{
-  content:"\e602"
-  // content:"\f0c9"
-}
+// .w-icon-nav-menu:before{
+//   content:"\e602"
+// }
 
 .nav {
   position: -webkit-sticky;
